--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["luyi <luyikk@126.com>"]
 edition = "2018"
 license = "MIT/Apache-2.0"
 readme = "README.md"
-repository = "https://github.com/luyikk/kcpclient"
+repository = "https://github.com/luyikk/kcp_client"
 documentation = "https://docs.rs/kcpclient"
 description = "kcp client."
 
